# simprot

./: README.md
data/: README.md  bigree100.txt  bigree111.txt  bigree120.txt  bigree160.txt  bigree320.txt  bigree40.txt  bigree80.txt  indels.txt  pairs
legacy/: README.md  eigen.h  makefile  random.c  random.h  read.c  simprot.cpp  simprot1.04_linux  simprot1.04_mac
simprot-cpp/: .gitignore  CMakeLists.txt  README.md
simprot-cpp/include/simprot/core/: config.hpp  random.hpp  types.hpp
simprot-cpp/include/simprot/evolution/: evolver.hpp  indel_model.hpp  matrix_data.hpp  substitution_matrix.hpp
simprot-cpp/include/simprot/io/: fasta_writer.hpp  newick_reader.hpp
simprot-cpp/include/simprot/sequence/: alignment.hpp  mutable_sequence.hpp
simprot-cpp/include/simprot/tree/: tree_node.hpp  tree_parser.hpp
simprot-cpp/src/: main.cpp
simprot-cpp/src/core/: config.cpp  random.cpp
simprot-cpp/src/evolution/: evolver.cpp  indel_model.cpp  substitution_matrix.cpp
simprot-cpp/src/io/: fasta_writer.cpp  newick_reader.cpp
simprot-cpp/src/sequence/: alignment.cpp  mutable_sequence.cpp  sequence_list.cpp
simprot-cpp/src/tree/: tree_node.cpp  tree_parser.cpp
simprot-cpp/tests/: test_config.cpp  test_indel_model.cpp  test_main.cpp  test_mutable_sequence.cpp  test_random.cpp  test_substitution_matrix.cpp  test_tree_parser.cpp  test_types.cpp
